--- a/Class_rand.ipynb
+++ b/Class_rand.ipynb
@@ -2,10 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "06a37d10-9cee-49ff-b779-d42fdba5952d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "Box.__init__() missing 1 required positional argument: 'mol_len'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[16], line 26\u001b[0m\n\u001b[1;32m     23\u001b[0m         \u001b[38;5;28;01mpass\u001b[39;00m\n\u001b[1;32m     25\u001b[0m PPS \u001b[38;5;241m=\u001b[39m Molecule(\u001b[38;5;241m100\u001b[39m)\n\u001b[0;32m---> 26\u001b[0m box \u001b[38;5;241m=\u001b[39m \u001b[43mBox\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "\u001b[0;31mTypeError\u001b[0m: Box.__init__() missing 1 required positional argument: 'mol_len'"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import random\n",
@@ -19,17 +31,20 @@
     "        self.atom_sequence = atom_sequence\n",
     "        \n",
     "\n",
-    "class Box: # The array within which the molecules will sit\n",
-    "    def __init__(self, num_mols, density=1):\n",
+    "class Box(Molecule): # The array within which the molecules will sit\n",
+    "    \n",
+    "    def __init__(self, num_mols, mol_len, density = 1): # Default density is 1 gram per cm^3\n",
     "        self.density = density\n",
     "        self.num_mols = num_mols\n",
-    "\n",
-    "    def box_size(self, num_mols, density=1):\n",
-    "        box_length = np.ceil(np.sqrt(molecule_len / density)) \n",
-    "        array = np.zeros((box_length,box_length))\n",
+    "        self.mol_len = super().__init__(mol_len)\n",
+    "        box_length = np.ceil(np.sqrt(molecule_len / density)) # Calculates requisite box size\n",
     "\n",
     "    def walk(self):\n",
-    "        pass"
+    "        \"\"\"Creates a path taken by a Monte-Carlo simulation to make a chain of atoms.\"\"\"\n",
+    "        pass\n",
+    "\n",
+    "PPS = Molecule(100)\n",
+    "box = Box(2)"
    ]
   }
  ],
