Added plot, check funcs, and resized instantiated array.

--- a/Class_rand.ipynb
+++ b/Class_rand.ipynb
@@ -2,23 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 24,
    "id": "06a37d10-9cee-49ff-b779-d42fdba5952d",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'num_mols' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[12], line 52\u001b[0m\n\u001b[1;32m     47\u001b[0m             move \u001b[38;5;241m=\u001b[39m moves[random\u001b[38;5;241m.\u001b[39mrandint(\u001b[38;5;241m0\u001b[39m,\u001b[38;5;241m7\u001b[39m)]\n\u001b[1;32m     51\u001b[0m PPS \u001b[38;5;241m=\u001b[39m System(\u001b[38;5;241m100\u001b[39m,\u001b[38;5;241m2\u001b[39m)\n\u001b[0;32m---> 52\u001b[0m \u001b[43mPPS\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mwalk\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[0;32mIn[12], line 40\u001b[0m, in \u001b[0;36mSystem.walk\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     37\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39marray \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39marray\u001b[38;5;241m.\u001b[39mresize((box_length, box_length)) \u001b[38;5;66;03m# The 'box'\u001b[39;00m\n\u001b[1;32m     38\u001b[0m moves \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray([[\u001b[38;5;241m1\u001b[39m,\u001b[38;5;241m0\u001b[39m],[\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m,\u001b[38;5;241m0\u001b[39m],[\u001b[38;5;241m0\u001b[39m,\u001b[38;5;241m1\u001b[39m],[\u001b[38;5;241m0\u001b[39m,\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m],[\u001b[38;5;241m1\u001b[39m,\u001b[38;5;241m1\u001b[39m],[\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m,\u001b[38;5;241m1\u001b[39m],[\u001b[38;5;241m1\u001b[39m,\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m],[\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m,\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m]]) \u001b[38;5;66;03m# Possible moves for the random walk\u001b[39;00m\n\u001b[0;32m---> 40\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m mol \u001b[38;5;129;01min\u001b[39;00m \u001b[43mnum_mols\u001b[49m:\n\u001b[1;32m     41\u001b[0m     path \u001b[38;5;241m=\u001b[39m []\n\u001b[1;32m     42\u001b[0m     position \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray([random\u001b[38;5;241m.\u001b[39mrandint(\u001b[38;5;241m0\u001b[39m, box_length \u001b[38;5;241m-\u001b[39m \u001b[38;5;241m1\u001b[39m), random\u001b[38;5;241m.\u001b[39mrandint(\u001b[38;5;241m0\u001b[39m, box_length \u001b[38;5;241m-\u001b[39m \u001b[38;5;241m1\u001b[39m)])\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'num_mols' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import random\n",
@@ -34,11 +21,11 @@
     "        self.density = density\n",
     "        self.all_paths = []\n",
     "        self.sys_hist = []\n",
-    "        self.array = np.array([0,0])\n",
+    "        self.array = np.array([0])\n",
     "\n",
-    "    def save(self, array, sys_state, ):\n",
+    "    def save(self, array, sys_state):\n",
     "        \"\"\"Saves the system such that it can be rolled back.\"\"\"\n",
-    "        sys_state = np.copy(array)\n",
+    "        self.sys_state = np.copy(array)\n",
     "        self.sys_hist.append(sys_state)\n",
     "        \n",
     "        return sys_state\n",
@@ -48,26 +35,53 @@
     "        self.array = sys_state\n",
     "        return array\n",
     "\n",
-    "    def mega_undo(self, array, sys_state):\n",
+    "    def mega_undo(self):\n",
     "        \"\"\"Reverts system state back to a previous version.\"\"\"\n",
     "        self.sys_state = self.sys_hist[-1]\n",
     "        self.array = self.sys_state\n",
     "        self.sys_hist = self.sys_hist[:-1]\n",
-    "    \n",
+    "\n",
+    "    # Plotting the path\n",
+    "    def plot():\n",
+    "        \"\"\"Graphs the paths of the creation of the molecules.\"\"\"\n",
+    "        print(\"Time:\", time.time() - start_time, \"s for\", len(paths), \"molecules with\", mol_len, \"atoms\")\n",
+    "        for path in paths:\n",
+    "            path = np.array(path)\n",
+    "            plt.plot(path[:, 1], path[:, 0], marker='o')\n",
+    "        plt.xlim([-1, cols])\n",
+    "        plt.ylim([-1, rows])\n",
+    "        plt.show()\n",
+    "\n",
+    "    # Defining check to see if there is already a 'molecule' at that position\n",
+    "    def check(array, move, position):\n",
+    "        global all_paths\n",
+    "        temp = position + move\n",
+    "        temp_tuple = tuple(temp) # Allowing comparison to array position\n",
+    "        if (temp[0] >= rows or temp[1] >= cols or temp[0] < 0 or temp[1] < 0 or \n",
+    "        temp_tuple in {tuple(pos) for path in all_paths for pos in path}): # Check if move is occupied by previous molecule\n",
+    "            return False, array, position\n",
+    "        elif array[temp[0], temp[1]] == 0: # Check if move is occupied by this molecule\n",
+    "            position = temp\n",
+    "            array[position[0], position[1]] = 1\n",
+    "            return True, array, position\n",
+    "        else:\n",
+    "            return False, array, position\n",
+    "\n",
     "    def walk(self):\n",
     "        \"\"\"Creates a path taken by a Monte-Carlo simulation to make a chain of atoms.\"\"\"\n",
     "        box_length = int(np.ceil(np.sqrt(self.mol_len / self.density))) # Calculates requisite box size\n",
-    "        self.array = self.array.resize((box_length, box_length)) # The 'box'\n",
+    "        self.array = np.zeros((box_length, box_length)) # The 'box'\n",
     "        moves = np.array([[1,0],[-1,0],[0,1],[0,-1],[1,1],[-1,1],[1,-1],[-1,-1]]) # Possible moves for the random walk\n",
     "        \n",
-    "        for mol in self.num_mols:\n",
+    "        for mol in range(self.num_mols):\n",
     "            path = []\n",
     "            position = np.array([random.randint(0, box_length - 1), random.randint(0, box_length - 1)])\n",
     "            self.array[position[0], position[1]] = 1\n",
     "            path.append(position.tolist())\n",
     "            i = 0 # Count of atoms placed\n",
     "            j = 0 # Count of rejected moves\n",
-    "            move = moves[random.randint(0,7)]\n",
+    "            for atom in range(self.mol_len):\n",
+    "                move = moves[random.randint(0,7)]\n",
     "            \n",
     "    \n",
     "\n",
