Cleaned up directory

--- a/Class_rand.ipynb
+++ b/Class_rand.ipynb
@@ -53,19 +53,19 @@
     "        plt.show()\n",
     "\n",
     "    # Defining check to see if there is already a 'molecule' at that position\n",
-    "    def check(array, move, position):\n",
-    "        global all_paths\n",
+    "    def check(slef, move, position):\n",
+    "        \"\"\"Checks to see if a move is possible.\"\"\"\n",
     "        temp = position + move\n",
     "        temp_tuple = tuple(temp) # Allowing comparison to array position\n",
     "        if (temp[0] >= rows or temp[1] >= cols or temp[0] < 0 or temp[1] < 0 or \n",
-    "        temp_tuple in {tuple(pos) for path in all_paths for pos in path}): # Check if move is occupied by previous molecule\n",
-    "            return False, array, position\n",
-    "        elif array[temp[0], temp[1]] == 0: # Check if move is occupied by this molecule\n",
+    "        temp_tuple in {tuple(pos) for path in self.all_paths for pos in path}): # Check if move is occupied by previous molecule\n",
+    "            return False, position\n",
+    "        elif array[temp[0], temp[1]] == 0: # Check if move is possible\n",
     "            position = temp\n",
-    "            array[position[0], position[1]] = 1\n",
-    "            return True, array, position\n",
+    "            self.array[position[0], position[1]] = 1\n",
+    "            return True, position\n",
     "        else:\n",
-    "            return False, array, position\n",
+    "            return False, position\n",
     "\n",
     "    def walk(self):\n",
     "        \"\"\"Creates a path taken by a Monte-Carlo simulation to make a chain of atoms.\"\"\"\n",
