Ignores .txt files.

--- a/Class_rand.ipynb
+++ b/Class_rand.ipynb
@@ -52,8 +52,11 @@
     "        plt.ylim([-1, rows])\n",
     "        plt.show()\n",
     "\n",
+    "    def output(self):\n",
+    "        \n",
+    "\n",
     "    # Defining check to see if there is already a 'molecule' at that position\n",
-    "    def check(slef, move, position):\n",
+    "    def check(self, move, position):\n",
     "        \"\"\"Checks to see if a move is possible.\"\"\"\n",
     "        temp = position + move\n",
     "        temp_tuple = tuple(temp) # Allowing comparison to array position\n",
