Got it to somewhat work, have to solve overlapping starting positions and mega undo.

--- a/Class_rand.ipynb
+++ b/Class_rand.ipynb
@@ -2,22 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 73,
    "id": "06a37d10-9cee-49ff-b779-d42fdba5952d",
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
+     "ename": "IndexError",
+     "evalue": "index -1 is out of bounds for axis 0 with size 0",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[32], line 124\u001b[0m\n\u001b[1;32m    120\u001b[0m             \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mall_paths\u001b[38;5;241m.\u001b[39mappend(path)\n\u001b[1;32m    123\u001b[0m PPS \u001b[38;5;241m=\u001b[39m System(\u001b[38;5;241m100\u001b[39m,\u001b[38;5;241m2\u001b[39m)\n\u001b[0;32m--> 124\u001b[0m \u001b[43mPPS\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mwalk\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    125\u001b[0m PPS\u001b[38;5;241m.\u001b[39mplot()\n",
-      "Cell \u001b[0;32mIn[32], line 102\u001b[0m, in \u001b[0;36mSystem.walk\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    100\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mrollback_count \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[1;32m    101\u001b[0m     \u001b[38;5;28;01mcontinue\u001b[39;00m\n\u001b[0;32m--> 102\u001b[0m success, position \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcheck\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmove\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mposition\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    103\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m success:\n\u001b[1;32m    104\u001b[0m     j \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n",
-      "Cell \u001b[0;32mIn[32], line 70\u001b[0m, in \u001b[0;36mSystem.check\u001b[0;34m(self, move, position)\u001b[0m\n\u001b[1;32m     67\u001b[0m temp \u001b[38;5;241m=\u001b[39m position \u001b[38;5;241m+\u001b[39m move\n\u001b[1;32m     68\u001b[0m temp_tuple \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mtuple\u001b[39m(temp) \u001b[38;5;66;03m# Allowing comparison to array position\u001b[39;00m\n\u001b[1;32m     69\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m (temp[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m>\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mbox_length \u001b[38;5;129;01mor\u001b[39;00m temp[\u001b[38;5;241m1\u001b[39m] \u001b[38;5;241m>\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mbox_length \u001b[38;5;129;01mor\u001b[39;00m temp[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m<\u001b[39m \u001b[38;5;241m0\u001b[39m \u001b[38;5;129;01mor\u001b[39;00m temp[\u001b[38;5;241m1\u001b[39m] \u001b[38;5;241m<\u001b[39m \u001b[38;5;241m0\u001b[39m \u001b[38;5;129;01mor\u001b[39;00m \n\u001b[0;32m---> 70\u001b[0m temp_tuple \u001b[38;5;129;01min\u001b[39;00m \u001b[43m{\u001b[49m\u001b[38;5;28;43mtuple\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mpos\u001b[49m\u001b[43m)\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mfor\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mpath\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;129;43;01min\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mall_paths\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mfor\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mpos\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;129;43;01min\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mpath\u001b[49m\u001b[43m}\u001b[49m): \u001b[38;5;66;03m# Check if move is occupied by previous molecule\u001b[39;00m\n\u001b[1;32m     71\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;01mFalse\u001b[39;00m, position\n\u001b[1;32m     72\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39marray[temp[\u001b[38;5;241m0\u001b[39m], temp[\u001b[38;5;241m1\u001b[39m]] \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m0\u001b[39m: \u001b[38;5;66;03m# Check if move is possible\u001b[39;00m\n",
-      "Cell \u001b[0;32mIn[32], line 70\u001b[0m, in \u001b[0;36m<setcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m     67\u001b[0m temp \u001b[38;5;241m=\u001b[39m position \u001b[38;5;241m+\u001b[39m move\n\u001b[1;32m     68\u001b[0m temp_tuple \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mtuple\u001b[39m(temp) \u001b[38;5;66;03m# Allowing comparison to array position\u001b[39;00m\n\u001b[1;32m     69\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m (temp[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m>\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mbox_length \u001b[38;5;129;01mor\u001b[39;00m temp[\u001b[38;5;241m1\u001b[39m] \u001b[38;5;241m>\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mbox_length \u001b[38;5;129;01mor\u001b[39;00m temp[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m<\u001b[39m \u001b[38;5;241m0\u001b[39m \u001b[38;5;129;01mor\u001b[39;00m temp[\u001b[38;5;241m1\u001b[39m] \u001b[38;5;241m<\u001b[39m \u001b[38;5;241m0\u001b[39m \u001b[38;5;129;01mor\u001b[39;00m \n\u001b[0;32m---> 70\u001b[0m temp_tuple \u001b[38;5;129;01min\u001b[39;00m {\u001b[38;5;28mtuple\u001b[39m(pos) \u001b[38;5;28;01mfor\u001b[39;00m path \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mall_paths \u001b[38;5;28;01mfor\u001b[39;00m pos \u001b[38;5;129;01min\u001b[39;00m path}): \u001b[38;5;66;03m# Check if move is occupied by previous molecule\u001b[39;00m\n\u001b[1;32m     71\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;01mFalse\u001b[39;00m, position\n\u001b[1;32m     72\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39marray[temp[\u001b[38;5;241m0\u001b[39m], temp[\u001b[38;5;241m1\u001b[39m]] \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m0\u001b[39m: \u001b[38;5;66;03m# Check if move is possible\u001b[39;00m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[73], line 133\u001b[0m\n\u001b[1;32m    129\u001b[0m             \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mall_paths\u001b[38;5;241m.\u001b[39mappend(path)\n\u001b[1;32m    132\u001b[0m PPS \u001b[38;5;241m=\u001b[39m System(\u001b[38;5;241m100\u001b[39m,\u001b[38;5;241m2\u001b[39m)\n\u001b[0;32m--> 133\u001b[0m \u001b[43mPPS\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mwalk\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    134\u001b[0m PPS\u001b[38;5;241m.\u001b[39mplot()\n",
+      "Cell \u001b[0;32mIn[73], line 111\u001b[0m, in \u001b[0;36mSystem.walk\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    109\u001b[0m     \u001b[38;5;28;01mcontinue\u001b[39;00m\n\u001b[1;32m    110\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mrollback_count \u001b[38;5;241m>\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m5\u001b[39m:\n\u001b[0;32m--> 111\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmega_undo\u001b[49m\u001b[43m(\u001b[49m\u001b[43mposition\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    112\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmega_undo_count \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[1;32m    113\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmega_undo_count \u001b[38;5;241m>\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m5\u001b[39m:\n",
+      "Cell \u001b[0;32mIn[73], line 44\u001b[0m, in \u001b[0;36mSystem.mega_undo\u001b[0;34m(self, position)\u001b[0m\n\u001b[1;32m     42\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mmega_undo\u001b[39m(\u001b[38;5;28mself\u001b[39m, position):\n\u001b[1;32m     43\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"Reverts system state back to a previous version.\"\"\"\u001b[39;00m\n\u001b[0;32m---> 44\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39msys_state \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msys_hist\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m]\u001b[49m\n\u001b[1;32m     45\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39marray \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39msys_state\n\u001b[1;32m     46\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39msys_hist \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39msys_hist[:\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m]\n",
+      "\u001b[0;31mIndexError\u001b[0m: index -1 is out of bounds for axis 0 with size 0"
      ]
     }
    ],
@@ -38,7 +37,7 @@
     "        self.density = density\n",
     "        self.all_paths = []\n",
     "        self.sys_state = []\n",
-    "        self.sys_hist = []\n",
+    "        self.sys_hist = np.array([])\n",
     "        self.array = np.array([0])\n",
     "        self.box_length = 0\n",
     "        self.rollback = (5 + int(np.ceil(self.mol_len / 1000)))\n",
@@ -51,8 +50,10 @@
     "        \"\"\"Saves the system such that it can be rolled back.\"\"\"\n",
     "        self.sys_state = np.copy(self.array)\n",
     "        self.pos = position\n",
-    "        self.sys_hist.append(self.sys_state)\n",
-    "        self.pos_hist.append(self.pos)\n",
+    "        # self.sys_hist.append(self.sys_state)\n",
+    "        # self.pos_hist.append(self.pos)\n",
+    "        np.append(self.sys_hist, self.sys_state)\n",
+    "        np.append(self.pos_hist, self.pos)\n",
     "        return position\n",
     "\n",
     "    def undo(self, position):\n",
@@ -129,12 +130,8 @@
     "                        j = max(0, j - self.rollback)\n",
     "                        self.rollback_count += 1\n",
     "                        continue\n",
-    "                    success, position = self.check(move, position)\n",
-    "                    if not success:\n",
-    "                        j += 1\n",
-    "                        continue\n",
     "                    elif self.rollback_count >= 5:\n",
-    "                        self.mega_undo()\n",
+    "                        self.mega_undo(position)\n",
     "                        self.mega_undo_count += 1\n",
     "                    elif self.mega_undo_count >= 5:\n",
     "                        temp_position = np.array([random.randint(0, self.box_length - 1), random.randint(0, self.box_length - 1)])\n",
@@ -144,16 +141,29 @@
     "                        else:\n",
     "                            temp_position = np.array([random.randint(0, self.box_length - 1), random.randint(0, self.box_length - 1)])\n",
     "                            continue\n",
+    "                    success, position = self.check(move, position)\n",
+    "                    if not success:\n",
+    "                        j += 1\n",
+    "                        continue\n",
+    "                    \n",
     "                    path.append(position.tolist())\n",
     "                    i += 1\n",
     "                    j = 0\n",
     "            self.all_paths.append(path)\n",
     "    \n",
     "\n",
-    "PPS = System(100,2)\n",
+    "PPS = System(10,1)\n",
     "PPS.walk()\n",
     "PPS.plot()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "61afcad5-3d78-4c8d-92b5-e25e79503cbb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
