Altered file path name.

--- a/Class_rand.ipynb
+++ b/Class_rand.ipynb
@@ -143,7 +143,7 @@
     "\n",
     "    def output(self):\n",
     "        \"\"\"Writes path to a CSV file.\"\"\"\n",
-    "        with open('profiles1.csv', 'w', newline='') as file:\n",
+    "        with open('positions.csv', 'w', newline='') as file:\n",
     "            writer = csv.writer(file)            \n",
     "            for path in self.all_paths:\n",
     "                writer.writerow(path)\n",
