--- a/3D_class.ipynb
+++ b/3D_class.ipynb
@@ -10,6 +10,7 @@
     "import numpy as np\n",
     "import random\n",
     "import matplotlib.pyplot as plt\n",
+    "from mpl_toolkits.mplot3d import Axes3D\n",
     "import time\n",
     "import csv\n",
     "\n",
@@ -26,7 +27,7 @@
     "        self.sys_hist = []\n",
     "        self.array = np.array([0])\n",
     "        self.box_length = 0\n",
-    "        self.rollback = 5 + int(np.ceil(self.mol_len / 100))\n",
+    "        self.rollback = 5 + int(np.ceil(self.mol_len / 1000))\n",
     "        self.rollback_count = 0\n",
     "        self.mega_undo_count = 0\n",
     "        self.pos = np.array([])\n",
@@ -56,12 +57,10 @@
     "        return self.pos\n",
     "\n",
     "    def save_mol(self, position):\n",
-    "        \"\"\"Saves a system state where a molecule was successfully created.\"\"\"\n",
     "        self.finished_mols = np.copy(self.array)\n",
     "        self.mol_pos = position.copy()\n",
     "\n",
     "    def undo_mol(self):\n",
-    "        \"\"\"Reverts system and position to where a molecule was last successfully created.\"\"\"\n",
     "        if len(self.finished_mols) > 0:\n",
     "            self.array = np.copy(self.finished_mols)\n",
     "            position = self.mol_pos.copy()\n",
@@ -71,7 +70,6 @@
     "        return position\n",
     "\n",
     "    def start_pos(self):\n",
-    "        \"\"\"Checks to see if a random starting position is occupied.\"\"\"\n",
     "        while True:\n",
     "            temp = np.array([random.randint(0, self.box_length - 1), random.randint(0, self.box_length - 1), random.randint(0, self.box_length - 1)])\n",
     "            if self.array[temp[0], temp[1], temp[2]] != 1:\n",
@@ -79,7 +77,6 @@
     "        return temp\n",
     "\n",
     "    def reset(self):\n",
-    "        \"\"\"Removes all placed atoms.\"\"\"\n",
     "        self.array.fill(0)\n",
     "        self.sys_hist = []\n",
     "        self.pos_hist = []\n",
@@ -104,7 +101,7 @@
     "        temp = position + move\n",
     "        temp_tuple = tuple(temp)  # Allowing comparison to array position\n",
     "        if (temp[0] >= self.box_length or temp[1] >= self.box_length or temp[2] >= self.box_length or\n",
-    "            temp[0] < 0 or temp[1] < 0 or temp[2] < 0 or\n",
+    "                temp[0] < 0 or temp[1] < 0 or temp[2] < 0 or\n",
     "                temp_tuple in {tuple(pos) for path in self.all_paths for pos in path}):  # Check if move is occupied by previous molecule\n",
     "            return False, position\n",
     "        elif self.array[temp[0], temp[1], temp[2]] == 0:  # Check if move is possible\n",
@@ -115,7 +112,7 @@
     "            return False, position\n",
     "\n",
     "    def output(self):\n",
-    "        \"\"\"Writes path to a CSV file\"\"\"\n",
+    "        \"\"\"Writes path to a csv file\"\"\"\n",
     "        with open('positions.csv', 'w', newline='') as file:\n",
     "            writer = csv.writer(file)            \n",
     "            for path in self.all_paths:\n",
@@ -123,7 +120,7 @@
     "    \n",
     "    def walk(self):\n",
     "        \"\"\"Creates a path taken by a Monte-Carlo simulation to make a chain of atoms.\"\"\"\n",
-    "        self.box_length = 1 + int(np.ceil(2 * np.sqrt(self.num_mols))) * int(np.ceil(np.sqrt(self.mol_len / self.density)))  # Calculates requisite box size\n",
+    "        self.box_length = 1 + int(np.ceil(2 * np.cbrt(self.num_mols))) * int(np.ceil(np.cbrt(self.mol_len / self.density)))  # Calculates requisite box size\n",
     "        self.array = np.zeros((self.box_length, self.box_length, self.box_length))  # The 'box'\n",
     "        moves = np.array([[1, 0, 0], [-1, 0, 0], [0, 1, 0], [0, -1, 0], [0, 0, 1], [0, 0, -1],\n",
     "                          [1, 1, 0], [1, -1, 0], [-1, 1, 0], [-1, -1, 0],\n",
@@ -140,7 +137,7 @@
     "\n",
     "            i = 1  # Count of atoms placed\n",
     "            j = 0  # Count of rejected moves\n",
-    "            \n",
+    "\n",
     "            while i < self.mol_len:\n",
     "                move = moves[random.randint(0, 25)]\n",
     "                success, position = self.check(move, position)\n",
@@ -158,7 +155,7 @@
     "                                position = self.undo_mol()\n",
     "                                self.rollback_count = 0  # Reset counters after undo_mol\n",
     "                                self.mega_undo_count = 0\n",
-    "                                self.array[position[0], position[1]] = 1\n",
+    "                                self.array[position[0], position[1], position[2]] = 1\n",
     "                                path = [position.tolist()]  # Reset path\n",
     "                                i = 1\n",
     "                    continue\n",
@@ -168,12 +165,12 @@
     "                j = 0\n",
     "            self.save_mol(position)\n",
     "            self.all_paths.append(path)\n",
-    "            # print(f\"Molecule {path_num + 1}: Length {len(path)}\")\n",
+    "            print(f\"Molecule {path_num + 1}: Length {len(path)}\")\n",
     "\n",
-    "PPS = System(20, 100)\n",
+    "PPS = System(1000, 4)\n",
     "PPS.walk()\n",
     "PPS.plot()\n",
-    "PPS.output()"
+    "PPS.output()\n"
    ]
   }
  ],
