Added working nematic order parameter function.

--- a/nematic-order.ipynb
+++ b/nematic-order.ipynb
@@ -55,6 +55,7 @@
     "\n",
     "\n",
     "start_time = time.time()  # Starting a timer\n",
+    "nematic = freud.order.Nematic() # Required for NOP\n",
     "\n",
     "class System:  # The array within which the molecules will sit\n",
     "    def __init__(self, mol_len, num_mols, atom_sequence=0, density=1):  # Default density is 1 gram per cm^3\n",
@@ -147,28 +148,17 @@
     "        ax.set_zlim([-1, self.box_length])\n",
     "        plt.show()\n",
     "\n",
-    "    def arrayarize1(self):\n",
-    "        final = []\n",
-    "        for path in self.all_paths:\n",
-    "            distances = []\n",
-    "            temp_pos = path[0]\n",
-    "            for position in path:\n",
-    "                distances.append(np.stack(position) - np.stack(temp_pos))\n",
-    "                temp_pos = position\n",
-    "            final.append(distances)\n",
-    "        yes = np.array(final)\n",
-    "        return yes\n",
     "\n",
-    "    def arrayarize2(self, path):\n",
-    "        final = []\n",
+    "    def arrayarize(self):\n",
+    "        \"\"\"Converts all paths into an array and computes the nematic order parameter.\"\"\"\n",
     "        distances = []\n",
-    "        temp_pos = path[0]\n",
-    "        for position in path:\n",
-    "            distances.append(np.stack(position) - np.stack(temp_pos))\n",
-    "            temp_pos = position\n",
-    "        final.append(distances)\n",
-    "        yes = np.array(final)\n",
-    "        return yes\n",
+    "        for path in self.all_paths:\n",
+    "            orientations = np.array(path[1:]) - np.array(path[:-1])\n",
+    "            np.append(distances, orientations)\n",
+    "        orientations = np.array(orientations)\n",
+    "        nematic.compute(orientations)\n",
+    "        print(nematic.order)\n",
+    "\n",
     "        \n",
     "    def check(self, move, position):\n",
     "        \"\"\"Checks to see if a move is possible.\"\"\"\n",
@@ -204,8 +194,8 @@
     "                          [-1, 1, 1], [-1, 1, -1], [-1, -1, 1], [-1, -1, -1]])  # Possible moves for the random walk\n",
     "        for path_num in range(self.num_mols):\n",
     "            path = []\n",
-    "            position = self.start_pos()\n",
-    "            self.array[position[0], position[1], position[2]] = 1\n",
+    "            position = self.start_pos() # Check for open space to instantiate a molecule\n",
+    "            self.array[position[0], position[1], position[2]] = 1 # Set the initial position to be occupied\n",
     "            path.append(position.tolist())\n",
     "            self.save(position)  # Save initial position\n",
     "\n",
@@ -236,14 +226,11 @@
     "            self.all_paths.append(path)\n",
     "            print(f\"Molecule {path_num + 1}: Length {len(path)}\")\n",
     "\n",
-    "PPS = System(10, 10)\n",
+    "PPS = System(100, 10)\n",
     "PPS.walk()\n",
     "PPS.plot()\n",
-    "nematic = freud.order.Nematic()\n",
-    "for path in self.all_paths:\n",
-    "    boi = PPS.arrayarize2(path)\n",
-    "    nematic.compute(boi)\n",
-    "    \n",
+    "PPS.arrayarize()\n",
+    "\n",
     "\n"
    ]
   },
