Rearranged functions and got rid of debugging statements.

--- a/nematic-order.ipynb
+++ b/nematic-order.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 37,
    "id": "4d38e2c3-1a4d-485a-9a71-98e531329f00",
    "metadata": {},
    "outputs": [
@@ -10,9 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3 3 11\n",
-      "[(0, 0, 0), (1, 0, 0), (2, 0, 0), (0, 1, 0), (1, 1, 0), (2, 1, 0), (0, 2, 0), (1, 2, 0), (2, 2, 0)]\n",
-      "Time: 0.011363029479980469 s for 9 molecules with 10 atoms\n"
+      "Time: 0.002131938934326172 s for 9 molecules with 10 atoms\n"
      ]
     },
     {
@@ -163,42 +161,30 @@
     "            for path in self.all_paths:\n",
     "                writer.writerow(path)        \n",
     "\n",
-    "    def add_straight(self):\n",
-    "        \"\"\"Adds molecules in a straight line to the box.\"\"\"\n",
-    "        self.box_length = (self.mol_len)\n",
-    "        x = 0\n",
-    "        y = 0\n",
-    "        z = 0\n",
-    "        self.position = [x, y, z]\n",
-    "        self.array = np.zeros((self.box_length, self.box_length, self.num_mols))\n",
-    "        num_max = np.copy(self.num_mols)\n",
-    "        for mols in range(self.num_mols):\n",
+    "    def add_lattice(self):\n",
+    "        \"\"\"Adds molecules into a box in a lattice pattern.\"\"\"\n",
+    "        rows = int(math.sqrt(self.num_mols))\n",
+    "        cols = rows if rows * rows == self.num_mols else rows + 1\n",
+    "        self.array = np.zeros((int(rows),int(cols),int(self.mol_len)+1))\n",
+    "        x_spacing = (cols - 1) if cols > 1 else 1\n",
+    "        y_spacing = (rows - 1) if rows > 1 else 1\n",
+    "        \n",
+    "        mol_start_pos = []\n",
+    "        for i in range(rows):\n",
+    "            for j in range(cols):\n",
+    "                if len(mol_start_pos) < self.num_mols:\n",
+    "                    mol_start_pos.append((j * x_spacing // (cols - 1) if cols > 1 else 0, i * y_spacing // (rows - 1) if rows > 1 else 0, 0))\n",
+    "        \n",
+    "        for mol in range(self.num_mols):\n",
     "            path = []\n",
-    "            if x <= (self.box_length - 1) and num_max > 0:\n",
-    "                for atom in range(self.mol_len):\n",
-    "                    self.array[x, y, z] = 1\n",
-    "                    y += 1\n",
-    "                    self.position = [x, y, z]\n",
-    "                    path.append(np.copy(self.position))\n",
-    "                self.all_paths.append(path)\n",
-    "                num_max -= 1\n",
-    "                x += 1\n",
-    "                y = 0\n",
-    "                position = np.copy(self.position)\n",
-    "                self.save_mol(position)\n",
-    "            if z <= (self.box_length - 1) and num_max > 0:\n",
-    "                for atom in range(self.mol_len):\n",
-    "                    self.array[x, y, z] = 1\n",
-    "                    y += 1\n",
-    "                    self.position = [x, y, z]\n",
-    "                    path.append(np.copy(self.position))\n",
-    "                self.all_paths.append(path)\n",
-    "                num_max -= 1\n",
+    "            self.position = mol_start_pos[mol]\n",
+    "            x,y,z = self.position\n",
+    "            for atom in range(self.mol_len):\n",
+    "                self.array[x, y, z] = 1\n",
     "                z += 1\n",
-    "                x = 0\n",
-    "                y = 0\n",
-    "                position = np.copy(self.position)\n",
-    "                self.save_mol(position)\n",
+    "                self.position = x, y, z\n",
+    "                path.append(np.copy(self.position))\n",
+    "            self.all_paths.append(path)\n",
     "\n",
     "  \n",
     "    def walk(self):\n",
@@ -245,45 +231,9 @@
     "            self.all_paths.append(path)\n",
     "            print(f\"Molecule {path_num + 1}: Length {len(path)}\")\n",
     "\n",
-    "    def lattice_positions(self):\n",
-    "        rows = int(math.sqrt(self.num_mols))\n",
-    "        cols = rows if rows * rows == self.num_mols else rows + 1\n",
-    "        self.array = np.zeros((int(rows),int(cols),int(self.mol_len)+1))\n",
-    "        print(rows,cols, self.mol_len + 1)\n",
-    "        x_spacing = (cols - 1) if cols > 1 else 1\n",
-    "        y_spacing = (rows - 1) if rows > 1 else 1\n",
-    "        \n",
-    "        mol_start_pos = []\n",
-    "        for i in range(rows):\n",
-    "            for j in range(cols):\n",
-    "                if len(mol_start_pos) < self.num_mols:\n",
-    "                    mol_start_pos.append((j * x_spacing // (cols - 1) if cols > 1 else 0, i * y_spacing // (rows - 1) if rows > 1 else 0, 0))\n",
-    "        x_coords, y_coords, z_coords = zip(*mol_start_pos)\n",
-    "        print(mol_start_pos)\n",
-    "        return mol_start_pos\n",
-    "\n",
-    "    def add_lattice(self, points):\n",
-    "        for mol in range(self.num_mols):\n",
-    "            path = []\n",
-    "            self.position = points[mol]\n",
-    "            x,y,z = self.position\n",
-    "            for atom in range(self.mol_len):\n",
-    "                self.array[x, y, z] = 1\n",
-    "                z += 1\n",
-    "                self.position = x, y, z\n",
-    "                path.append(np.copy(self.position))\n",
-    "            self.all_paths.append(path)\n",
-    "\n",
-    "            \n",
-    "\n",
     "\n",
     "PPS = System(9, 10)\n",
-    "# PPS.walk()\n",
-    "# PPS.add_straight()\n",
-    "# PPS.plot()\n",
-    "# PPS.arrayarize()\n",
-    "points = PPS.lattice_positions()\n",
-    "PPS.add_lattice(points)\n",
+    "PPS.add_lattice()\n",
     "PPS.plot()\n"
    ]
   },
